step 1 - add portfolio section in html file with links to your projects on github

--- a/index.html
+++ b/index.html
@@ -48,6 +48,35 @@
       </div>
     </section>
 
+    <!-- portfolio section -->
+    <section id="portfolio">
+      <h1 class="section-header">Portfolio</h1>
+      <div class="portfolio-container">
+        <div class="portfolio-item">
+          <h2>To Do List</h2>
+          <div class="image-container">
+            <img src="images/todo-list.jpeg" alt="To do list" />
+          </div>
+          <p>
+            Description of this mini project. Lorem Ipsum is simply dummy text
+            of the printing and typesetting industry.
+          </p>
+          <a href="https://github.com/tandica/todo-list">View Project</a>
+        </div>
+        <div class="portfolio-item">
+          <h2>My Sounds</h2>
+          <div class="image-container">
+            <img src="images/mysounds.jpeg" alt="Playlist image" />
+          </div>
+          <p>
+            Description of this mini project. Lorem Ipsum is simply dummy text
+            of the printing and typesetting industry.
+          </p>
+          <a href="https://github.com/tandica/mysound2">View Project</a>
+        </div>
+      </div>
+    </section>
+
     <!-- contact section -->
     <section id="contact">
       <h1 class="section-header">Contact Me</h1>
