step 2 - add styling and images for portfolio section, update image file extensions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="portfolio-item">
           <h2>To Do List</h2>
           <div class="image-container">
-            <img src="images/todo-list.jpeg" alt="To do list" />
+            <img src="images/todo-list.png" alt="To do list" />
           </div>
           <p>
             Description of this mini project. Lorem Ipsum is simply dummy text
@@ -66,7 +66,7 @@
         <div class="portfolio-item">
           <h2>My Sounds</h2>
           <div class="image-container">
-            <img src="images/mysounds.jpeg" alt="Playlist image" />
+            <img src="images/mysounds.jpg" alt="Playlist image" />
           </div>
           <p>
             Description of this mini project. Lorem Ipsum is simply dummy text
