--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <!-- nav section -->
     <nav class="fixed-nav">
@@ -85,5 +84,6 @@
       >
       <a class="contact-link" href="https://github.com/sabiat">GitHub</a>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
