step 4 - add the footer html and styling

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
       >
       <a class="contact-link" href="https://github.com/sabiat">GitHub</a>
     </section>
+    <footer>
+      <p class="footer-text">Made with 🖤 by Sabia Tahir</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
