step 5 - add email in contact, add overlay on header image, add project descriptions, add personal description example

--- a/index.html
+++ b/index.html
@@ -38,11 +38,32 @@
         <img src="images/avatar.jpeg" alt="Self image" />
         <div class="about-text">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book.
+            I am a full stack developer with over 2 years of experience working
+            in the healthcare industry during which I gained experience in
+            multiple roles and discovered my passion for lifelong learning. My
+            longstanding interest in software development along with my
+            motivation to continually expand my skill set led me to pivot in my
+            career and pursue further education to gain the front-end and
+            back-end skills to become a full stack developer. I am currently
+            working as a software developer. I also enjoy teaching and am
+            currently teaching an introduction to web development course to
+            encourage more women to enter tech!
           </p>
+          <p>
+            Some of the languages and frameworks I am familiar with include:
+          </p>
+          <div class="languages-list">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+            <ul>
+              <li>Ruby</li>
+              <li>React</li>
+              <li>Ruby on Rails</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -57,8 +78,8 @@
             <img src="images/todo-list.png" alt="To do list" />
           </div>
           <p>
-            Description of this mini project. Lorem Ipsum is simply dummy text
-            of the printing and typesetting industry.
+            An app that allows you to create and delete tasks, and mark them as
+            complete.
           </p>
           <a href="https://github.com/tandica/todo-list">View Project</a>
         </div>
@@ -67,10 +88,7 @@
           <div class="image-container">
             <img src="images/mysounds.jpg" alt="Playlist image" />
           </div>
-          <p>
-            Description of this mini project. Lorem Ipsum is simply dummy text
-            of the printing and typesetting industry.
-          </p>
+          <p>An app that showcases my favourite songs.</p>
           <a href="https://github.com/tandica/mysound2">View Project</a>
         </div>
       </div>
@@ -79,6 +97,7 @@
     <!-- contact section -->
     <section id="contact">
       <h1 class="section-header">Contact Me</h1>
+      <a class="contact-link" href="mailto:sabiatahir@hotmail.com">Email</a>
       <a class="contact-link" href="https://www.linkedin.com/in/sabia-tahir"
         >LinkedIn</a
       >
